--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -13,6 +13,8 @@
   justify-content: center;
   width: 100%;
   padding: 1rem;
+  background-color: var(--on-color);
+  border-bottom: 3px solid var(--secondary-color);
 }
 .header__header {
   display: flex;
@@ -33,6 +35,7 @@
   width: var(--toggleTheme-btn-width);
   height: var(--toggleTheme-btn-height);
   border-radius: 33px;
+  transform: scale(0.85);
 }
 .header__header button #circle {
   position: absolute;
@@ -49,52 +52,4 @@
   &.dark {
     transform: translateX(calc(var(--toggleTheme-btn-width) - var(--toggleTheme-btn-height)));
   }
-}
-
-.navigation {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  min-height: 88px;
-  width: 100%;
-  background-color: var(--secondary-color);
-}
-.navigation__list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  justify-content: space-evenly;
-  width: 100%;
-  padding: 0.5rem 0;
-  list-style: none;
-}
-.navigation__item {
-  padding: 0.5rem 6vw;
-  border-bottom: 2px solid var(--text-color);
-  transition: all 300ms ease-in-out;
-  opacity: 0.65;
-  &:hover {
-    opacity: 1;
-    color: var(--primary-color);
-    border-color: var(--primary-color);
-  }
-  & a {
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
-    color: var(--text-color);
-    transition: all 300ms ease-in;
-  }
-  &:hover a {
-    color: var(--text-color);
-    opacity: 1;
-  }
-}
-.navigation__item.selected a {
-  color: var(--text-color);
-}
-.navigation__item.selected {
-  color: var(--text-color);
-  border-bottom: 4px solid var(--primary-color);
-  opacity: 1;
 }
