--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,7 @@
 :root {
   --toggleTheme-btn-height: 40px;
   --toggleTheme-btn-width: 80px;
+  --header-height: 100px;
 }
 
 .header {
@@ -12,9 +13,11 @@
   align-items: flex-start;
   justify-content: center;
   width: 100%;
+  height: var(--header-height);
   padding: 1rem;
   background-color: var(--on-color);
   border-bottom: 3px solid var(--secondary-color);
+  z-index: 100;
 }
 .header__header {
   display: flex;
@@ -23,6 +26,7 @@
   justify-content: space-between;
   padding: 0 min(2rem, 6vw);
   width: 100%;
+  z-index: 99;
 }
 .header__title {
   font-size: 2.4rem;
