--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -35,23 +35,21 @@ button:focus-visible {
 .container {
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   overflow: hidden;
 
-  background: var(--on-color);
   color: var(--text-color);
-
-  border: 1px solid var(--primary-color-opacity);
   border-radius: 4px;
 
-  width: min(96vw, 800px);
-  min-height: 30vh;
-  margin: 0 auto;
+  width: min(100vw, 800px);
+  min-height: calc(100vh - var(--header-height));
+  margin: var(--header-height) auto 0 auto;
   padding: 1rem;
 }
 .container__title {
   font-size: 1.8rem;
   padding: 0.2rem 1rem;
+  margin-bottom: 2.5rem;
   border-bottom: 4px solid var(--primary-color);
 }
