--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -15,6 +15,8 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
   min-height: min(90%, 800px);
   min-width: min(90%, 800px);
   padding-top: 2rem;
@@ -31,7 +33,7 @@
   display: flex;
   width: 100%;
   padding: 4px;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 .form__input input {
